--- a/style.css
+++ b/style.css
@@ -135,6 +135,12 @@ h1, h2, h3 {
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
+/*
+display: flex;
+justify-content: center;
+align-items: center;
+*/
+
 .ficha-producto img {
     width: 100px;
     height: 100px;
@@ -222,4 +228,60 @@ h1, h2, h3 {
     text-align: center;
     font-style: italic;
     font-weight: bold;
+}   
+
+table {
+  width: 100%;
+  border-collapse: collapse; /* sin espacio entre bordes */
+  margin: 1.5rem 0;
+  font-size: 0.95rem;
+  background: var(--table-bg);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
 }
+
+th, td {
+  border: 1px solid var(--table-border);
+  padding: var(--table-padding);
+  text-align: center;
+  border-collapse: collapse;
+  justify-content: space-around;
+}
+
+th {
+  background: var(--table-header-bg);
+  font-weight: 600;
+  background-color: var(--color-dorado);
+  
+
+}
+
+tr{
+    border: 1px solid var(--table-border);
+     padding: var(--table-padding);
+    text-align: center;
+    background-color: var(--color-arena);
+}
+
+
+#bolsa{
+    width: 125px;
+    
+}
+
+@keyframes mover {
+  to {
+    position: translateX(0);
+  }
+  from {
+    transform: translateX(-200px);
+  }
+}
+
+.bolsa {
+  animation: mover 2s ease;
+}
+
+.tr{
+    animation: mover 2s ease;
+}
+
