--- a/style.css
+++ b/style.css
@@ -285,3 +285,35 @@ tr{
     animation: mover 2s ease;
 }
 
+
+/* --- DISEÑO DE LA TABLA RANKING --- */
+
+#tabla-ranking-html {
+    width: 95%;
+    max-width: 800px;
+    margin: 30px auto; 
+    border-collapse: collapse;
+    background-color: var(--color-arena); 
+    color: var(--color-texto); /* Color  para toda la tabla */
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#tabla-ranking-html thead {
+    background-color: var(--color-cuero-oscuro);
+}
+
+#tabla-ranking-html th {
+    padding: 18px 15px;
+    text-align: center;
+    color: var(--color-texto); /* Color  en cabecera */
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+#tabla-ranking-html td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    font-weight: normal; 
+}
